--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  cloud_firestore: ^2.5.3
-  firebase_core: ^1.10.0
-  firebase_auth: ^3.2.0
-  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+
+  cloud_firestore: ^3.4.9
+  firebase_core: ^1.23.0
+  firebase_auth: ^3.10.0
+  modal_progress_hud_nsn: ^0.3.0
   flutter_chat_bubble: ^2.0.0
-  image_picker: ^0.8.4+11
-  firebase_storage: ^10.2.9
+  image_picker: ^0.8.5+3
+  firebase_storage: ^10.3.9
 
 
 dev_dependencies:
